# aws-vpc-global-planner

./: .gitignore  README.md  pyproject.toml
planvpc/: myregions.py  regions.py
tf/modules/vpc-auto/: dhcp.tf  igw.tf  locals.tf  main.tf  outputs.tf  route.tf  subnets.tf  variables.tf  vpc.tf
